--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "affinidi-bounty1",
+  "name": "affinidi-bounty2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
