--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .env.local
-.env.local
-
+prisma/migrations
 # dependencies
 /node_modules
 /.pnp
